# fgsp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: client_config.yaml  cloud_publisher_config.yaml  cloud_saver_config.yaml  debug.yaml  default.yaml  fgsp.rviz  forest.joblib  local.rviz  local_client_config.yaml  lookup_aligned_pose.yaml  monitor_config.yaml  object_publisher_config.yaml  objects.yaml  path_transformer_config.yaml  reproject.yaml  simulation_config.yaml
config/robots/: debug_client_config.yaml  local_client_config.yaml  rsl_anymal_camel_client_config.yaml  rsl_anymal_cerberus_client_config.yaml  rsl_anymal_chimera_client_config.yaml
data/: README.md
data/gonzen_combined/: mission_01.csv  mission_02.csv  mission_03.csv  mission_04.csv
data/mission_01/: loam.csv  loam_header_less.csv  opt.csv  opt_header_less.csv  rovio.csv  rovio_header_less.csv
data/mission_03/: cdpgo_graph.csv  cdpgo_signal.csv  loam.csv  loam_header_less.csv  opt.csv  opt_header_less.csv  rovio.csv  rovio_header_less.csv
deploy/: Dockerfile.client  Dockerfile.fgsp  Dockerfile.monitor  build_docker.sh  compile.sh  copy_to_ctx.sh  install_base.sh  install_packages.sh  install_ros.sh  install_simple.sh  set_env.sh
deploy/docker_ctx/ws/src/maplab_msgs/: LICENSE  package.xml
deploy/docker_ctx/ws/src/maplab_msgs/msg/: Artifact.msg  ArtifactReport.msg  ArtifactReportResponse.msg  DenseNode.msg  SubmapConstraint.msg  TrajectoryNode.msg  VerificationCheckRequest.msg  VerificationCheckResponse.msg
deploy/docker_ctx/ws/src/maplab_msgs/srv/: BatchMapLookup.srv  GetDenseMapInRange.srv
fgsp/: graph_client.py  test.py
launch/: cloud_publisher_launch.py  cloud_saver_launch.py  graph_client.launch  graph_client_launch.py  graph_monitor.launch  graph_monitor_debug.launch  graph_monitor_launch.py  graph_monitor_with_client.launch  graph_monitor_with_converter.launch  lookup_pose_launch.py  object_publisher_launch.py  path_transformer_launch.py  reproject_pub_launch.py  simulation_launch.py
script/: run_camel  run_cerberus  run_chimera  run_debug  run_graph_monitor
src/: GraphSignatures.ipynb  Mission_01_test.ipynb  Mission_03_test.ipynb  Mission_03_test_new_graph.ipynb  __init__.py  adjacency_test.ipynb  check_recordings.ipynb  exported_trajectory_test.ipynb  hiearchy_test.ipynb  initial_gsp_test.ipynb  place_recognition_test.ipynb  pyramid_tests.ipynb  residual_test.ipynb  se3_test.ipynb  spline_test.ipynb  submap_evaluation.ipynb  training_data_generation.ipynb  tree.dot
(+95 files in other folders)
