<?xml version="1.0"?>
<package format="2">
  <name>maplab_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for Maplab ROS interface.</description>
  <maintainer email="maplab-dev@ethz-asl.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
